--- a/css/_sign.scss
+++ b/css/_sign.scss
@@ -71,3 +71,37 @@
   margin-top: 30px;
   font-size: 15px;
 }
+
+.another-sign-up-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px 0px;
+
+  .line {
+    border-bottom: 1px solid #e2e2e2;
+    width: 100%;
+  }
+  .info {
+    white-space: nowrap;
+    font-size: 15px;
+    color: #cecece;
+    margin: 0px 20px;
+  }
+}
+
+.another-sign-up {
+  display: flex;
+  justify-content: center;
+  .another-logo-container {
+    display: flex;
+    justify-content: space-between;
+    width: 230px;
+    .google-logo {
+      width: 50px;
+      height: 50px;
+      background-color: #ededed;
+      border-radius: 50%;
+    }
+  }
+}
