--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,33 @@
   margin-top: 30px;
   font-size: 15px; }
 
+.another-sign-up-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px 0px; }
+  .another-sign-up-info .line {
+    border-bottom: 1px solid #e2e2e2;
+    width: 100%; }
+  .another-sign-up-info .info {
+    white-space: nowrap;
+    font-size: 15px;
+    color: #cecece;
+    margin: 0px 20px; }
+
+.another-sign-up {
+  display: flex;
+  justify-content: center; }
+  .another-sign-up .another-logo-container {
+    display: flex;
+    justify-content: space-between;
+    width: 230px; }
+    .another-sign-up .another-logo-container .google-logo {
+      width: 50px;
+      height: 50px;
+      background-color: #ededed;
+      border-radius: 50%; }
+
 * {
   margin: 0;
   padding: 0;
