--- a/css/_sign.scss
+++ b/css/_sign.scss
@@ -18,7 +18,6 @@
 .sign-in {
   background-color: #fafafb;
   width: 305px;
-  height: 430px;
   border-radius: 30px;
   padding: 40px;
 
@@ -93,15 +92,37 @@
 .another-sign-up {
   display: flex;
   justify-content: center;
+
   .another-logo-container {
     display: flex;
     justify-content: space-between;
     width: 230px;
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     .google-logo {
       width: 50px;
       height: 50px;
       background-color: #ededed;
       border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 23px;
+      }
     }
   }
+}
+
+.another-text {
+  font-size: 14px;
+  font-weight: 300;
+  margin-top: 5px;
+  color: #313136;
 }
