--- a/src/css/_sign.scss
+++ b/src/css/_sign.scss
@@ -83,7 +83,7 @@
   }
   .info {
     white-space: nowrap;
-    font-size: 15px;
+    font-size: 13px;
     color: #cecece;
     margin: 0px 20px;
   }
@@ -104,25 +104,45 @@
       align-items: center;
     }
 
-    .google-logo {
-      width: 50px;
-      height: 50px;
+    .another-logo {
+      width: 43px;
+      height: 43px;
       background-color: #ededed;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
 
-      img {
-        width: 23px;
+      &.google {
+        background-color: white;
+        border: 1px solid #ebebeb;
+        img {
+          width: 17px;
+        }
+      }
+
+      &.naver {
+        background-color: #03cf5d;
+        border: 1px solid #ebebeb;
+        img {
+          width: 15px;
+        }
+      }
+
+      &.kakao {
+        background-color: #fae100;
+        border: 1px solid #ebebeb;
+        img {
+          width: 17px;
+        }
       }
     }
   }
 }
 
 .another-text {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 300;
   margin-top: 5px;
-  color: #313136;
+  color: #818183;
 }
