26일 작업내용

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,7 +1,8 @@
 @import "./font";
 @import "./palette";
 @import "./keyframe.scss";
-@import "./sign.scss";
+@import "./signUp.scss";
+@import "./signIn.scss";
 
 * {
   margin: 0;
