6/2 이메일 회원가입 퍼블리싱 2차

--- a/src/css/_signIn.scss
+++ b/src/css/_signIn.scss
@@ -29,6 +29,7 @@
     background-color: #fff;
     font-size: 15px;
     color: #333;
+    padding: 0 10px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
