회원가입 퍼블리싱 마무리

--- a/src/css/_signIn.scss
+++ b/src/css/_signIn.scss
@@ -13,6 +13,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  &.sign-up {
+    margin-bottom: 150px;
+  }
 }
 
 .sign-in {
