--- a/src/css/_signUp.scss
+++ b/src/css/_signUp.scss
@@ -33,3 +33,23 @@
   display: flex;
   margin-top: 10px;
 }
+
+.sign-up-email-input {
+  input {
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    border: 1px solid #e1e2e3;
+    background-color: #fff;
+    font-size: 15px;
+    color: #333;
+    padding: 0 10px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: none;
+    resize: none;
+  }
+}
