메인 레이아웃 적용

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,9 @@
-@import './font';
-@import './palette';
-@import './keyframe.scss';
-@import './signUp.scss';
-@import './signIn.scss';
-@import './commonUse.scss';
+@import "./font";
+@import "./palette";
+@import "./keyframe.scss";
+@import "./signUp.scss";
+@import "./signIn.scss";
+@import "./commonUse.scss";
 
 * {
 	margin: 0;
