--- a/src/scss/_signIn.scss
+++ b/src/scss/_signIn.scss
@@ -1,167 +1,168 @@
 .sign-in-container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .sub-container {
-  width: 1140px;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  &.sign-up {
-    margin-bottom: 150px;
-  }
+	width: 1140px;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	&.sign-up {
+		margin-bottom: 150px;
+	}
 }
 
 .sign-in {
-  background-color: #fafafb;
-  width: 305px;
-  border-radius: 30px;
-  padding: 40px;
+	background-color: #fafafb;
+	width: 20.5rem;
+	border-radius: 2rem;
+	padding: 40px;
 
-  input {
-    width: 100%;
-    height: 50px;
-    border-radius: 5px;
-    border: 1px solid #e1e2e3;
-    background-color: #fff;
-    font-size: 15px;
-    color: #333;
-    padding: 0 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    outline: none;
-    resize: none;
-  }
+	input {
+		width: 100%;
+		height: 50px;
+		border-radius: 5px;
+		border: 1px solid #e1e2e3;
+		background-color: #fff;
+		font-size: 15px;
+		color: #333;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		outline: none;
+		resize: none;
+	}
 }
 
 .logo-sign-in {
-  img {
-    width: 130px;
-    margin-bottom: 20px;
-  }
+	img {
+		width: 9rem;
+		margin-bottom: 20px;
+	}
 }
 
 .sign-in-input {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .sub-title {
-  margin-bottom: 5px;
-  color: #cecece;
-  font-size: 15px;
+	margin-bottom: 5px;
+	color: #cecece;
+	font-size: 15px;
 }
 
 .button-regular {
-  width: 100%;
-  height: 45px;
-  border-radius: 5px;
-  background-color: #0037f5;
-  cursor: pointer;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 500;
-  margin-top: 30px;
-  font-size: 15px;
+	width: 100%;
+	height: 45px;
+	border-radius: 5px;
+	background-color: #0037f5;
+	cursor: pointer;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: 500;
+	margin-top: 30px;
+	font-size: 15px;
 }
 
 .another-sign-up-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 25px 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 25px 0px;
 
-  .line {
-    border-bottom: 1px solid #e2e2e2;
-    width: 100%;
-  }
-  .info {
-    white-space: nowrap;
-    font-size: 13px;
-    color: #cecece;
-    margin: 0px 20px;
-  }
+	.line {
+		border-bottom: 1px solid #e2e2e2;
+		width: 100%;
+	}
+	.info {
+		white-space: nowrap;
+		font-size: 13px;
+		color: #cecece;
+		margin: 0px 20px;
+	}
 }
 
 .another-sign-up {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: center;
 
-  .another-logo-container {
-    display: flex;
-    justify-content: space-between;
-    width: 230px;
+	.another-logo-container {
+		display: flex;
+		justify-content: space-between;
+		width: 230px;
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
 
-    .another-logo {
-      width: 43px;
-      height: 43px;
-      background-color: #ededed;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+		.another-logo {
+			width: 43px;
+			height: 43px;
+			background-color: #ededed;
+			border-radius: 50%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			cursor: pointer;
 
-      &.google {
-        background-color: white;
-        border: 1px solid #ebebeb;
-        img {
-          width: 17px;
-        }
-      }
+			&.google {
+				background-color: white;
+				border: 1px solid #ebebeb;
+				img {
+					width: 17px;
+				}
+			}
 
-      &.naver {
-        background-color: #03cf5d;
-        border: 1px solid #ebebeb;
-        img {
-          width: 15px;
-        }
-      }
+			&.naver {
+				background-color: #03cf5d;
+				border: 1px solid #ebebeb;
+				img {
+					width: 15px;
+				}
+			}
 
-      &.kakao {
-        background-color: #fae100;
-        border: 1px solid #ebebeb;
-        img {
-          width: 17px;
-        }
-      }
-    }
-  }
+			&.kakao {
+				background-color: #fae100;
+				border: 1px solid #ebebeb;
+				img {
+					width: 17px;
+				}
+			}
+		}
+	}
 }
 
 .another-text {
-  font-size: 13px;
-  font-weight: 300;
-  margin-top: 5px;
-  color: #818183;
+	font-size: 13px;
+	font-weight: 300;
+	margin-top: 5px;
+	color: #818183;
 }
 
 .find-content {
-  display: flex;
-  margin-top: 30px;
+	display: flex;
+	margin-top: 30px;
 
-  div {
-    color: #cecece;
-    margin-right: 20px;
-    font-size: 14px;
+	div {
+		color: #cecece;
+		margin-right: 20px;
+		font-size: 14px;
+		cursor: pointer;
 
-    &:last-child {
-      margin-right: 0px;
-    }
-  }
+		&:last-child {
+			margin-right: 0px;
+		}
+	}
 }
