--- a/src/scss/_signIn.scss
+++ b/src/scss/_signIn.scss
@@ -20,14 +20,14 @@
 
 .sign-in {
 	background-color: #fafafb;
-	width: 20.5rem;
+	width: 23.5rem;
 	border-radius: 2rem;
 	padding: 40px;
 
 	input {
 		width: 100%;
-		height: 50px;
-		border-radius: 5px;
+		height: 3rem;
+		border-radius: 0.5rem;
 		border: 1px solid #e1e2e3;
 		background-color: #fff;
 		font-size: 15px;
@@ -39,30 +39,31 @@
 		box-shadow: none;
 		outline: none;
 		resize: none;
+		padding: 0 0.8rem;
 	}
 }
 
 .logo-sign-in {
 	img {
 		width: 9rem;
-		margin-bottom: 20px;
+		margin-bottom: 2rem;
 	}
 }
 
 .sign-in-input {
-	margin-bottom: 20px;
+	margin-bottom: 1rem;
 }
 
 .sub-title {
-	margin-bottom: 5px;
+	margin-bottom: 0.5rem;
 	color: #cecece;
 	font-size: 15px;
 }
 
 .button-regular {
 	width: 100%;
-	height: 45px;
-	border-radius: 5px;
+	height: 3rem;
+	border-radius: 0.5rem;
 	background-color: #0037f5;
 	cursor: pointer;
 	color: white;
