--- a/src/scss/_signIn.scss
+++ b/src/scss/_signIn.scss
@@ -22,15 +22,15 @@
 	background-color: #fafafb;
 	width: 23.5rem;
 	border-radius: 2rem;
-	padding: 40px;
+	padding: 2.4rem;
 
 	input {
 		width: 100%;
 		height: 3rem;
 		border-radius: 0.5rem;
-		border: 1px solid #e1e2e3;
+		border: 0.1rem solid #e1e2e3;
 		background-color: #fff;
-		font-size: 15px;
+		font-size: 0.9rem;
 		color: #333;
 		-webkit-appearance: none;
 		-moz-appearance: none;
@@ -41,6 +41,14 @@
 		resize: none;
 		padding: 0 0.8rem;
 	}
+
+	.sign-in-input {
+		margin-bottom: 1rem;
+
+		&.last-child {
+			margin-bottom: 1.8rem;
+		}
+	}
 }
 
 .logo-sign-in {
@@ -50,19 +58,15 @@
 	}
 }
 
-.sign-in-input {
-	margin-bottom: 1rem;
-}
-
 .sub-title {
 	margin-bottom: 0.5rem;
 	color: #cecece;
-	font-size: 15px;
+	font-size: 0.9rem;
 }
 
 .button-regular {
 	width: 100%;
-	height: 3rem;
+	height: 2.8rem;
 	border-radius: 0.5rem;
 	background-color: #0037f5;
 	cursor: pointer;
@@ -71,15 +75,14 @@
 	align-items: center;
 	justify-content: center;
 	font-weight: 500;
-	margin-top: 30px;
-	font-size: 15px;
+	font-size: 0.9rem;
 }
 
 .another-sign-up-info {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 25px 0px;
+	margin: 1.5rem 0;
 
 	.line {
 		border-bottom: 1px solid #e2e2e2;
@@ -87,9 +90,9 @@
 	}
 	.info {
 		white-space: nowrap;
-		font-size: 13px;
+		font-size: 0.8rem;
 		color: #cecece;
-		margin: 0px 20px;
+		margin: 0 1rem;
 	}
 }
 
@@ -100,7 +103,7 @@
 	.another-logo-container {
 		display: flex;
 		justify-content: space-between;
-		width: 230px;
+		width: 14rem;
 
 		.container {
 			display: flex;
@@ -109,8 +112,8 @@
 		}
 
 		.another-logo {
-			width: 43px;
-			height: 43px;
+			width: 2.7rem;
+			height: 2.7rem;
 			background-color: #ededed;
 			border-radius: 50%;
 			display: flex;
@@ -122,7 +125,7 @@
 				background-color: white;
 				border: 1px solid #ebebeb;
 				img {
-					width: 17px;
+					width: 1.1rem;
 				}
 			}
 
@@ -130,7 +133,7 @@
 				background-color: #03cf5d;
 				border: 1px solid #ebebeb;
 				img {
-					width: 15px;
+					width: 0.9rem;
 				}
 			}
 
@@ -138,7 +141,7 @@
 				background-color: #fae100;
 				border: 1px solid #ebebeb;
 				img {
-					width: 17px;
+					width: 1.1rem;
 				}
 			}
 		}
