--- a/src/scss/_commonUse.scss
+++ b/src/scss/_commonUse.scss
@@ -2,6 +2,14 @@ button {
 	border: none;
 }
 
+a {
+	text-decoration: none;
+
+	&:hover {
+		text-decoration: none;
+	}
+}
+
 .flex {
 	display: flex;
 }
@@ -9,9 +17,11 @@ button {
 .flc {
 	display: flex;
 	align-items: center;
+
 	&.jcc {
 		justify-content: center;
 	}
+
 	&.jsb {
 		justify-content: space-between;
 	}
