--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,9 @@
-@import '@fontsource/fira-mono';
+@import "@fontsource/fira-mono";
 
 :root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
+	font-family: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	--font-mono: "Fira Mono", monospace;
 	--pure-white: #ffffff;
 	--primary-color: #b9c6d2;
 	--secondary-color: #d0dde9;
@@ -19,29 +19,29 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--primary-color);
+	/* background-color: var(--primary-color);
 	background: linear-gradient(
 		180deg,
 		var(--primary-color) 0%,
 		var(--secondary-color) 10.45%,
 		var(--tertiary-color) 41.35%
-	);
+	); */
 }
 
 body::before {
-	content: '';
+	content: "";
 	width: 80vw;
 	height: 100vh;
 	position: absolute;
 	top: 0;
 	left: 10vw;
 	z-index: -1;
-	background: radial-gradient(
+	/* background: radial-gradient(
 		50% 50% at 50% 50%,
 		var(--pure-white) 0%,
 		rgba(255, 255, 255, 0) 100%
 	);
-	opacity: 0.05;
+	opacity: 0.05; */
 }
 
 #svelte {
