sign up 디테일 수정

--- a/src/scss/_commonUse.scss
+++ b/src/scss/_commonUse.scss
@@ -43,6 +43,10 @@ a {
 	margin-bottom: 20px;
 }
 
+.mt20 {
+	margin-top: 20px;
+}
+
 .basic-btn {
 	background-color: #0037f5;
 	padding: 10px 20px;
