--- a/src/scss/_signUp.scss
+++ b/src/scss/_signUp.scss
@@ -1,55 +1,62 @@
 .sign-up-container {
-  width: 370px;
-  padding: 35px;
-  border: 1px solid #ececf4;
-  border-radius: 23px;
+	width: 30rem;
+	padding: 2rem;
+	border: 1px solid #ececf4;
+	border-radius: 1.6rem;
+	background-color: #fafafb;
 }
 
 .sign-up-info-container {
-  .info {
-    font-size: 27px;
-    font-weight: bold;
+	.info {
+		font-size: 27px;
+		font-weight: bold;
 
-    &.sec {
-      margin-bottom: 20px;
-    }
-  }
+		&.sec {
+			margin-bottom: 20px;
+		}
+	}
 }
 
 .sign-up-sec-info {
-  font-size: 15px;
-  color: #cecece;
-  margin-bottom: 10px;
+	font-size: 15px;
+	color: #cecece;
+	margin-bottom: 10px;
 }
 
 .logo-sign-up {
-  img {
-    width: 110px;
-    margin-bottom: 20px;
-  }
+	img {
+		width: 110px;
+		margin-bottom: 20px;
+	}
 }
 
 .sign-up-email-input {
-  display: flex;
-  margin-top: 10px;
+	display: flex;
+	margin-top: 10px;
 }
 
 .sign-up-email-input {
-  input {
-    width: 100%;
-    height: 50px;
-    border-radius: 5px;
-    border: 1px solid #e1e2e3;
-    background-color: #fff;
-    font-size: 15px;
-    color: #333;
-    padding: 0 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    outline: none;
-    resize: none;
-  }
+	input {
+		width: 100%;
+		height: 50px;
+		border-radius: 5px;
+		border: 1px solid #e1e2e3;
+		background-color: #fff;
+		font-size: 15px;
+		color: #333;
+		padding: 0 10px;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		outline: none;
+		resize: none;
+	}
+}
+
+.select-email {
+	button {
+		height: 100%;
+	}
 }
