다크 모드 관련 퍼블리싱 1차

--- a/src/scss/_signUp.scss
+++ b/src/scss/_signUp.scss
@@ -30,6 +30,24 @@
 	}
 }
 
+body {
+	background-color: #ffffff;
+	&.dark-mode {
+		.test {
+			background-color: #333;
+		}
+	}
+}
+.dark-mode {
+	.test {
+		background-color: #333;
+	}
+}
+
+.test {
+	background-color: white;
+}
+
 .sign-up-email-input {
 	display: flex;
 	margin-top: 10px;
