--- a/src/scss/_signIn.scss
+++ b/src/scss/_signIn.scss
@@ -1,3 +1,11 @@
+body {
+	&.dark-mode {
+		.sign-in {
+			background-color: #333;
+		}
+	}
+}
+
 .sign-in-container {
 	width: 100%;
 	height: 100vh;
