--- a/src/scss/_signIn.scss
+++ b/src/scss/_signIn.scss
@@ -1,7 +1,12 @@
 body {
 	&.dark-mode {
-		.sign-in {
-			background-color: #333;
+		.dark-container {
+			background-color: #19191a;
+			border: 1px solid #2e2f33;
+		}
+		button,
+		.dark-logo {
+			border: none !important;
 		}
 	}
 }
