footer 까지 추가하고 푸쉬

--- a/src/scss/_commonUse.scss
+++ b/src/scss/_commonUse.scss
@@ -31,6 +31,14 @@ a {
 	margin-right: 3px;
 }
 
+.mr4 {
+	margin-right: 4px;
+}
+
+.mr5 {
+	margin-right: 5px;
+}
+
 .mr10 {
 	margin-right: 10px;
 }
