--- a/src/scss/_signUp.scss
+++ b/src/scss/_signUp.scss
@@ -17,6 +17,10 @@
 	}
 }
 
+.nav-bar-sec {
+	border: none !important;
+}
+
 .sign-up-sec-info {
 	font-size: 15px;
 	color: #cecece;
@@ -79,3 +83,112 @@ body {
 		height: 100%;
 	}
 }
+
+.nav-bar {
+	padding: none !important;
+}
+
+body {
+	padding: 0;
+
+	&.dark-mode {
+		.dark-container {
+			background-color: #272728 !important;
+			border: none !important;
+		}
+		button,
+		.dark-logo {
+			border: none !important;
+		}
+
+		.test {
+			background-color: #cecece;
+		}
+	}
+}
+
+.footer-contaienr {
+	background-color: #272728 !important;
+	border: 1px solid #3c3c43 !important;
+	width: 100%;
+}
+
+.nav-input {
+	.mb-3 {
+		margin: none !important;
+	}
+}
+
+header {
+	position: sticky;
+	top: 0px;
+	z-index: 9999;
+}
+
+// header {
+// 	z-index: 9999;
+// 	position: sticky;
+// 	top: 0;
+// 	height: 4rem;
+// 	display: flex;
+// 	justify-content: center;
+// 	color: $fontDefaultColor;
+// 	font-size: 1.1rem;
+
+// 	-webkit-transition: 0.4s;
+// 	-moz-transition: 0.4s;
+// 	transition: 0.4s;
+
+// 	.header-container {
+// 		width: 1140px;
+// 		display: flex;
+// 		align-items: center;
+// 		justify-content: space-between;
+// 	}
+
+// 	.main-logo {
+// 		img {
+// 			cursor: pointer;
+// 			width: 120px;
+// 			margin-top: 10px;
+// 		}
+// 	}
+
+// 	.category {
+// 		display: flex;
+
+// 		div {
+// 			cursor: pointer;
+// 			margin-right: 2rem;
+// 			&:last-child {
+// 				margin-right: 0px;
+// 			}
+
+// 			a {
+// 				color: #414046;
+// 			}
+// 		}
+// 	}
+
+// 	&.is-sticky {
+// 		height: 4rem;
+// 		border-bottom: 1px solid #cecece;
+// 		font-size: 1rem;
+// 		background-color: white;
+
+// 		.category {
+// 			div {
+// 				margin-right: 1rem;
+// 				&:last-child {
+// 					margin-right: 0px;
+// 				}
+// 			}
+// 		}
+
+// 		.main-logo {
+// 			img {
+// 				width: 90px;
+// 			}
+// 		}
+// 	}
+// }
