글쓰기 퍼블리싱, 프린텐다드로 변경

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,13 +5,14 @@
 @import "./signIn.scss";
 @import "./commonUse.scss";
 @import "./postCard.scss";
+@import "./write.scss";
 
 * {
   margin: 0;
   padding: 0;
   list-style: 0;
   text-decoration: none;
-  font-family: NotoSansCJKkr;
+  font-family: Pretendard Variable;
 }
 
 input {
